--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script>
     if (location.pathname != '/wsc/') location.replace(location.protocol+'//'+location.host+'/wsc/');
   </script>
-  <title>wsc v3.0</title>
+  <title>wsc v3.1b</title>
   <meta charset="utf-8">
   <meta name="description" content="WSC web secure chat OIL Online Interative Learning Marie Bruggeman Guy Francoeur">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,7 +47,7 @@
       </div>
       <div id="divAudio" class="col-xs col-sm-5 col-md-6">
         <div id="divEmission">
-          <button id="bstart" class="btn" type="button" data-toggle="tooltip" data-placement="bottom" title="Ouvir mon micro">
+          <button id="bstart" class="btn" type="button" data-toggle="tooltip" data-placement="bottom" title="Ouvir mon micro (FUTURE v4)" disabled>
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-mic-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
               <path fill-rule="evenodd" d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
