--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
           <div class="" style=" display: flex;flex-direction: row;">
             <button id="bF" class="btn  b1"><i class="glyphicon glyphicon-file" data-toggle="tooltip" data-placement="top" title="Envoyer une image"></i></button>
             <button onclick="return false;" tabIndex="0" id="bH" class="btn b1" role="button" data-container="body" data-trigger="focus" data-original-title="<strong>Hint</strong>" 
-              data-content="<ul style='padding-left:10px;'>
-                <li>Utilisez <kbd>Shift</kbd> + <kbd>Enter</kbd> pour envoyer votre message</li>
+              data-content="<ul class='ulHint'>
+                <li>Utilisez <span class='kbd'>Shift</span> + <span class='kbd'>Enter</span> pour envoyer votre message</li>
                 <li>Pour maintenir le formatage de votre msg, vous pouvez utiliser la balise html <code>&#60; pre > ... &#60; /pre ></code></li>
-                <li>Utilisez <kbd>Ctrl</kbd> + <kbd>0</kbd> pour remplacer les <code>&#60;</code> par <code>& #60;</code></li>
-                <li>Utilisez <kbd>Ctrl</kbd> + <kbd>9</kbd> pour inclure le msg dans une balise <code>&#60; pre &#62;</code></li>
-                <li>Utilisez <span class='racc'><kbd>Ctrl</kbd> + <kbd>8</kbd></span> pour formater le msg (code C, Java..) dans une balise <code>&#60; pre &#62;</code></li>
-                <li>Utilisez les touches <span class='racc'><kbd>Windows</kbd> + <kbd>;</kbd></span> pour les émoicons</li>
+                <li>Utilisez <span class='kbd'>Ctrl</span> + <span class='kbd'>0</span> pour remplacer les <code>&#60;</code> par <code>& #60;</code></li>
+                <li>Utilisez <span class='kbd'>Ctrl</span> + <span class='kbd'>9</span> pour inclure le msg dans une balise <code>&#60; pre &#62;</code></li>
+                <li>Utilisez <span class='racc'><span class='kbd'>Ctrl</span> + <span class='kbd'>8</span></span> pour formater le msg (code C, Java..) dans une balise <code>&#60; pre &#62;</code></li>
+                <li>Utilisez les touches <span class='racc'><span class='kbd'>Windows</span> + <span class='kbd'>;</span></span> pour les émoicons</li>
                 </ul>" data-toggle="popover" data-placement="top">
               <i class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="top" title="Hint"></i>
               </button>
